# FastLLM

./: .gitignore  Cargo.toml  MIT_LICENSE  README.md  lefthook.yml  tarpaulin.toml
.github/workflows/: ci-chek.yml  coverage.yml  docs.yml
crates/core/: Cargo.toml
crates/core/src/: autoagents.rs  cache.rs  config.rs  echo.rs  error.rs  gateway.rs  lib.rs  retry.rs  scheduler.rs  telemetry.rs  types.rs
crates/core/src/local/: mod.rs
crates/core/src/runtime/: llamacpp.rs  mod.rs
crates/fastllm/: Cargo.toml
crates/fastllm/src/: lib.rs
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/content/: index.mdx
docs/content/guides/: getting-started.mdx
docs/content/reference/: typed-configuration.mdx
docs/content/runtime/: architecture.mdx  local-models.mdx
docs/src/css/: custom.css
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/local-model-inference/: Cargo.toml
examples/local-model-inference/src/: main.rs
examples/memory-management/: Cargo.toml
examples/memory-management/src/: main.rs
examples/parallel-local-inference/: Cargo.toml
examples/parallel-local-inference/src/: main.rs
examples/scheduler-showcase/: Cargo.toml
examples/scheduler-showcase/src/: main.rs
