[package]
name = "fastllm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
local = ["dep:autoagents-llamacpp"]
cuda = ["local", "autoagents-llamacpp/cuda"]
metal = ["local", "autoagents-llamacpp/metal"]
cuda-no-vmm = ["local", "autoagents-llamacpp/cuda-no-vmm"]
vulkan = ["local", "autoagents-llamacpp/vulkan"]

[dependencies]
async-trait.workspace = true
autoagents-llm = { workspace = true, features = ["full"] }
autoagents-llamacpp = { workspace = true , optional = true, features = ["mtmd"]}

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
