[package]
name = "fastllm"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[features]
local = ["fastllm-core/local"]
cuda = ["fastllm-core/cuda"]
metal = ["fastllm-core/metal"]
cuda-no-vmm = ["fastllm-core/cuda-no-vmm"]
vulkan = ["fastllm-core/vulkan"]

[dependencies]
fastllm-core.workspace = true
