[package]
name = "fastllm-example-local-model-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
cuda = ["fastllm/cuda"]
metal = ["fastllm/metal"]

[dependencies]
fastllm = { workspace = true, features = ["local"] }
serde_json.workspace = true
tokio.workspace = true
